@@ -7,7 +7,7 @@
  *      Minimal forward declarations of libpq types needed in libpqxx headers
  *      DO NOT INCLUDE THIS FILE when building client programs.
  *
- * Copyright (c) 2005, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2005, 2006, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
@@ -32,6 +32,7 @@ namespace pq
 typedef pg_conn PGconn;
 typedef pg_result PGresult;
 typedef pgNotify PGnotify;
+typedef void (*PQnoticeProcessor)(void *, const char *);
 }
 }
 
